--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Алкоголь и здоровье. Физиологические механизмы опьянения.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
+    <link rel="stylesheet" href="shower/themes/ribbon/styles/styles.css">
     <style>
         .shower {
             --slide-ratio: calc(16 / 9);
@@ -178,7 +178,7 @@
 
     <div class="progress"></div>
 
-    <script src="node_modules/@shower/core/dist/shower.js"></script>
+    <script src="shower/shower.js"></script>
     <!-- Copyright © 2022 Yours Truly, Famous Inc. -->
 
 </body>
