--- a/index.html
+++ b/index.html
@@ -173,13 +173,12 @@
         </style>
     </section>
     <footer class="badge">
-        <a href="https://github.com/a1ip/alcohol">Исходный код на GitHub</a>
+        <a href="https://github.com/a1ip/alcohol">Исходный код</a>
     </footer>
 
     <div class="progress"></div>
 
     <script src="shower/shower.js"></script>
-    <!-- Copyright © 2022 Yours Truly, Famous Inc. -->
 
 </body>
 </html>
