--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </style>
     </section>
     <section class="slide">
-        <h2>Разберем процесс подробнее</h2>
+        <h2>Метаболизм этанола</h2>
         <p>Поступая внутрь организма, происходит следующий процесс всасывания этилового спирта в кровь: </p><p> обжигая слизистую оболочку полости рта, глотки пищевода, его молекулы поступают в желудочно-кишечный тракт. Спирт быстро и полностью всасывается в желудке, а через час он достигает максимальной концентрации в крови.</p>
     </section>
     <section class="slide">
