--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <p>Поступая внутрь организма, происходит следующий процесс всасывания этилового спирта в кровь: </p><p> обжигая слизистую оболочку полости рта, глотки пищевода, его молекулы поступают в желудочно-кишечный тракт. Спирт быстро и полностью всасывается в желудке, а через час он достигает максимальной концентрации в крови.</p>
     </section>
     <section class="slide">
-        <h2>Разберем процесс подробнее</h2>
+        <h2>Метаболизм этанола</h2>
         <p>Из желудка этанол проникает в кровь (водный раствор) и кровью разносится по всему организму. Особенно активно адсорбируют алкоголь из крови жирсодержащие органы (головной мозг и печень), а также зародыш беременной женщины. В печени протекает ферментативное окисление этанола до уксусного альдегида.</p>
     </section>
     <section class="slide">
