--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     </style>
 </head>
-<body class="shower list">
+<body class="shower full">
 
     <header class="caption">
         <h1>Алкоголь и здоровье.<br>Физиологические механизмы опьянения.</h1>
@@ -67,11 +67,14 @@
     </section>
     <section class="slide">
         <h2>Ущерб печени</h2>
-        <p>Алкоголь уничтожает клетки печени, а ведь в ней происходит образование АТФ (аденозинтрифосфорной кислоты — основного источника энергии в организме), детоксикация (обезвреживание) ядов и многое другое.</p>
+        <p>Алкоголь уничтожает клетки печени, а ведь в ней происходит образование АТФ (аденозинтрифосфорной кислоты — основного
+            источника энергии в организме), детоксикация (обезвреживание) ядов и многое другое.</p>
     </section>
     <section class="slide">
         <h2>Ущерб психике</h2>
-        <p>Злоупотребление алкоголем ведет к деградации личности, делает человека психически неуравновешенным. 70% преступлений против личности совершается людьми в состоянии алкогольного опьянения. Это наиболее тяжелые социальные последствия алкогольной зависимости.</p>
+        <p>Злоупотребление алкоголем ведет к деградации личности, делает человека психически неуравновешенным. 70% преступлений
+            против личности совершается людьми в состоянии алкогольного опьянения. Это наиболее тяжелые социальные последствия
+            алкогольной зависимости.</p>
     </section>
     <section class="slide">
         <h2>10 мифов об алкоголе</h2>
@@ -92,11 +95,14 @@
     </section>
     <section class="slide">
         <h2>Пьянство ведет к алкоголизму</h2>
-        <p>Этиловый спирт постоянно присутствует в организме человека, он образуется в процессе обмена веществ. Поступающий через пищеварительный тракт алкоголь распадается до ядовитого ацетальдегида и оказывает на клетки и органы разрушительное воздействие.</p>
+        <p>Этиловый спирт постоянно присутствует в организме человека, он образуется в процессе обмена веществ. Поступающий через
+            пищеварительный тракт алкоголь распадается до ядовитого ацетальдегида и оказывает на клетки и органы разрушительное
+            воздействие.</p>
     </section>
     <section class="slide">
         <h2>Немного химии</h2>
-        <p>Большинство алкогольных напитков получают в результате спиртового брожения глюкозы, протекающего под действием ферментов - дрожжей, согласно уравнению:</p>
+        <p>Большинство алкогольных напитков получают в результате спиртового брожения глюкозы, протекающего под действием
+            ферментов — дрожжей, согласно уравнению:</p>
         <p class="chem">С₆Н₁₂О₆ → 2С₂Н₅ОН + 2СО₂</p>
         <style>
             .chem {
@@ -107,11 +113,15 @@
     </section>
     <section class="slide">
         <h2>Метаболизм этанола</h2>
-        <p>Поступая внутрь организма, происходит следующий процесс всасывания этилового спирта в кровь: </p><p> обжигая слизистую оболочку полости рта, глотки пищевода, его молекулы поступают в желудочно-кишечный тракт. Спирт быстро и полностью всасывается в желудке, а через час он достигает максимальной концентрации в крови.</p>
+        <p>Поступая внутрь организма, происходит следующий процесс всасывания этилового спирта в кровь: </p>
+        <p> обжигая слизистую оболочку полости рта, глотки пищевода, его молекулы поступают в желудочно-кишечный тракт.
+            Спирт быстро и полностью всасывается в желудке, а через час он достигает максимальной концентрации в крови.</p>
     </section>
     <section class="slide">
         <h2>Метаболизм этанола</h2>
-        <p>Из желудка этанол проникает в кровь (водный раствор) и кровью разносится по всему организму. Особенно активно адсорбируют алкоголь из крови жирсодержащие органы (головной мозг и печень), а также зародыш беременной женщины. В печени протекает ферментативное окисление этанола до уксусного альдегида.</p>
+        <p>Из желудка этанол проникает в кровь (водный раствор) и кровью разносится по всему организму. Особенно активно
+            адсорбируют алкоголь из крови жирсодержащие органы (головной мозг и печень), а также зародыш беременной женщины.
+            В печени протекает ферментативное окисление этанола до уксусного альдегида.</p>
     </section>
     <section class="slide">
         <figure>
@@ -125,24 +135,42 @@
         <h2>Эффект виноградной грозди</h2>
         <p>При поступлении в кровь алкоголь начинает соприкасаться с эритроцитами.
 
-        Спиртосодержащая жидкость удаляет липидный защитный слой эритроцитов и снимает электростатическое напряжение. При этом красные кровяные клетки приобретают новое свойство, они начинают слипаться друг с другом, образуя своеобразные гроздья, размер которых определяется количеством выпитого алкоголя. В кругу посвященных это явление именуется эффектом виноградной грозди. В научном плане оно было открыто в 1960-е годы в США.
+        Спиртосодержащая жидкость удаляет липидный защитный слой эритроцитов и снимает электростатическое напряжение.
+            При этом красные кровяные клетки приобретают новое свойство, они начинают слипаться друг с другом,
+            образуя своеобразные гроздья, размер которых определяется количеством выпитого алкоголя.
+            В кругу посвященных это явление именуется эффектом виноградной грозди.
+            В научном плане оно было открыто в 1960-е годы в США.
             </p>
     </section>
     <section class="slide">
         <h2>Образование тромбов</h2>
-        <p>Наша кровеносная система в отдельных частях тела (мозг, сетчатка глаза) являет собой тончайшие капилляры, причем диаметр некоторых, наиболее тонких из них, меньше поперченных размеров эритроцитов, и капилляр при прохождении по нему эритроцита расширяется. Появившиеся в крови сгустки образуют в тонких капиллярах тромбы, и кровоснабжение отдельных групп нейронов головного мозга, а также сетчатки прекращается.</p>
+        <p>Наша кровеносная система в отдельных частях тела (мозг, сетчатка глаза) являет собой тончайшие капилляры,
+            причем диаметр некоторых, наиболее тонких из них, меньше поперченных размеров эритроцитов,
+            и капилляр при прохождении по нему эритроцита расширяется. Появившиеся в крови сгустки
+            образуют в тонких капиллярах тромбы, и кровоснабжение отдельных групп нейронов головного мозга,
+            а также сетчатки прекращается.</p>
     </section>
     <section class="slide">
         <h2>Гибель нейронов</h2>
-        <p>Происходит «онемение», а потом и отмирание отдельных микроучастков головного мозга, которое и воспринимается человеком, как якобы безобидное состояние опьянения. В этом состоянии часть нейронов головного мозга погибает.</p><p>По данным специалистов, 100 мл водки необратимо уничтожают около 1 млн нейронов.</p>
+        <p>Происходит «онемение», а потом и отмирание отдельных микроучастков головного мозга,
+            которое и воспринимается человеком, как якобы безобидное состояние опьянения.
+            В этом состоянии часть нейронов головного мозга погибает.</p><p>По данным специалистов,
+        100&nbsp;мл водки необратимо уничтожают около&nbsp;1&nbsp;млн&nbsp;нейронов.</p>
     </section>
     <section class="slide">
         <h2>Похмелье</h2>
-        <p>Синдром похмелья — не что иное, как процесс, связанный с удалением из головного мозга погибших из-за отсутствия кровоснабжения нейронов. Тело отторгает погибшие клетки, с этим и связаны утренние головные боли. Для удаления погибших клеток в коре головного мозга создается повышенное давление за счет усиленного притока жидкости и фактически прямого физиологического промывания головного мозга. Именно с этим связана жажда, возникающая после употребления алкоголя. Человек, принимавший алкоголь, мочится своими бывшими мозгами.</p>
+        <p>Синдром похмелья — не что иное, как процесс, связанный с удалением из головного мозга
+            погибших из-за отсутствия кровоснабжения нейронов. Тело отторгает погибшие клетки,
+            с этим и связаны утренние головные боли. Для удаления погибших клеток в коре головного мозга
+            создается повышенное давление за счет усиленного притока жидкости и фактически прямого
+            физиологического промывания головного мозга. Именно с этим связана жажда,
+            возникающая после употребления алкоголя. Человек, принимавший алкоголь, мочится своими бывшими мозгами.</p>
     </section>
     <section class="slide">
         <h2>Пагубное влияние на психику</h2>
-        <p>Таким образом, любое, даже однократное потребление алкоголя меняет возможности головного мозга и, прежде всего, его тонких структур, отвечающих за психику в целом, разум и интуитивные прозрения, формируемые на бессознательных уровнях психики личности.</p>
+        <p>Таким образом, любое, даже однократное потребление алкоголя меняет возможности головного мозга и,
+            прежде всего, его тонких структур, отвечающих за психику в целом, разум и интуитивные прозрения,
+            формируемые на бессознательных уровнях психики личности.</p>
     </section>
     <section class="slide">
         <div class="columns two">
