--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     </style>
 </head>
-<body class="shower full">
+<body class="shower list">
 
     <header class="caption">
         <h1>Алкоголь и здоровье.<br>Физиологические механизмы опьянения.</h1>
