--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <section class="slide">
         <h2>Спасибо за внимание!</h2>
         <ul>
-            <li>ИКТИБ ИТА ЮФУ, кафедра САиТ</li>
+            <li>Alma mater: ИКТИБ ИТА ЮФУ, кафедра САиТ</li>
             <li class="next">Докладчик: Филипп Ригованов, студент группы КТбз4-3</li>
             <li class="next">Дисциплина: Культура здоровья</li>
             <li class="next">Преподаватель: Кадетова Наталья Владимировна</li>
