--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </section>
     <section class="slide">
         <h2>Похмелье</h2>
-        <p>Синдром похмелья — не что иное, как процесс, связанный с удалением из головного мозга
+        <p>Синдром похмелья — процесс, связанный с удалением из головного мозга
             погибших из-за отсутствия кровоснабжения нейронов. Тело отторгает погибшие клетки,
             с этим и связаны утренние головные боли. Для удаления погибших клеток в коре головного мозга
             создается повышенное давление за счет усиленного притока жидкости и фактически прямого
