--- a/index.html
+++ b/index.html
@@ -77,19 +77,21 @@
             алкогольной зависимости.</p>
     </section>
     <section class="slide">
-        <h2>10 мифов об алкоголе</h2>
+        <h2>12 мифов об алкоголе</h2>
         <div class="columns two">
             <ol><li>Помогает быстро согреться</li>
                 <li class="next">Усиливает аппетит</li>
                 <li class="next">Cнимает стресс</li>
+                <li class="next">Cнимает страх</li>
                 <li class="next">Повышает работоспособность</li>
                 <li class="next">Понижает артериальное давление</li>
             </ol>
-            <ol start="6"><li class="next"  value="6">Лекарство от простуды</li>
-                <li class="next"  value="7">Пиво — это не алкоголь</li>
-                <li class="next"  value="8">Не калориен</li>
-                <li class="next"  value="9">Надо не запивать, а закусывать</li>
-                <li class="next"  value="10">Если качественный, то вреда не наносит</li>
+            <ol start="7"><li class="next"  value="7">Лекарство от простуды</li>
+                <li class="next"  value="8">Пиво — это не алкоголь</li>
+                <li class="next"  value="9">Не калориен</li>
+                <li class="next"  value="10">Повышает потенцию</li>
+                <li class="next"  value="11">Надо не запивать, а закусывать</li>
+                <li class="next"  value="12">Если качественный, то вреда не наносит</li>
             </ol>
         </div>
     </section>
