--- a/index.html
+++ b/index.html
@@ -184,11 +184,14 @@
     </section>
     <section class="slide">
         <h2>Спасибо за внимание!</h2>
-        <ul>
-            <li>Alma mater: ИКТИБ ИТА ЮФУ, кафедра САиТ</li>
-            <li class="next">Докладчик: Филипп Ригованов, студент группы КТбз4-3</li>
+        <ul>https://ictis.sfedu.ru
+            <li>Alma mater: <a href="https://ictis.sfedu.ru" target="_blank" title="Институт компьютерных технологий и информационной безопасности">ИКТИБ</a>
+                <a href="http://tti.sfedu.ru" target="_blank" title="Инженерно-технологическая академия">ИТА</a>
+                <a href="https://sfedu.ru" target="_blank" title="Южный Федеральный Университет">ЮФУ</a>,
+                    кафедра <a href="https://sait.sfedu.ru" target="_blank" title="Кафедра системного анализа и телекоммуникаций">САиТ</a></li>
+            <li class="next">Докладчик: <a href="https://sait.sfedu.ru" target="_blank">Филипп Ригованов</a>, студент группы КТбз4-3</li>
             <li class="next">Дисциплина: Культура здоровья</li>
-            <li class="next">Преподаватель: Кадетова Наталья Владимировна</li>
+            <li class="next">Преподаватель: <a href="https://sfedu.ru/person/nvkadetova" target="_blank">Кадетова Наталья Владимировна</a></li>
         </ul>
     </section>
 
