--- a/index.html
+++ b/index.html
@@ -184,15 +184,23 @@
     </section>
     <section class="slide">
         <h2>Спасибо за внимание!</h2>
-        <ul>
-            <li>Alma mater: <a href="https://ictis.sfedu.ru" target="_blank" title="Институт компьютерных технологий и информационной безопасности">ИКТИБ</a>
+        <ul class="unmarked">
+            <li>🏫 Alma mater: <a href="https://ictis.sfedu.ru" target="_blank" title="Институт компьютерных технологий и информационной безопасности">ИКТИБ</a>
                 <a href="http://tti.sfedu.ru" target="_blank" title="Инженерно-технологическая академия">ИТА</a>
                 <a href="https://sfedu.ru" target="_blank" title="Южный Федеральный Университет">ЮФУ</a>,
                     кафедра <a href="https://sait.sfedu.ru" target="_blank" title="Кафедра системного анализа и телекоммуникаций">САиТ</a></li>
-            <li class="next">Докладчик: <a href="https://phil.rigovanov.ru" target="_blank">Филипп Ригованов</a>, студент группы КТбз4-3</li>
-            <li class="next">Дисциплина: Культура здоровья</li>
-            <li class="next">Преподаватель: <a href="https://sfedu.ru/person/nvkadetova" target="_blank">Кадетова Наталья Владимировна</a></li>
+            <li class="next">🗣 Докладчик: <a href="https://phil.rigovanov.ru" target="_blank">Филипп Ригованов</a>, студент группы КТбз4-3</li>
+            <li class="next">💪🏻 Дисциплина: Культура здоровья</li>
+            <li class="next">👩🏻‍🏫 Преподаватель: <a href="https://sfedu.ru/person/nvkadetova" target="_blank">Кадетова Наталья Владимировна</a></li>
         </ul>
+        <style>
+            ul.unmarked {
+                list-style: none;
+            }
+            ul.unmarked li {
+                list-style-type: none;
+            }
+        </style>
     </section>
 
     <section class="slide" id="see-more">
