--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
                 <a href="https://sfedu.ru" target="_blank" title="Южный Федеральный Университет">ЮФУ</a>,
                     кафедра <a href="https://sait.sfedu.ru" target="_blank" title="Кафедра системного анализа и телекоммуникаций">САиТ</a></li>
             <li class="next">🗣 Докладчик: <a href="https://phil.rigovanov.ru" target="_blank">Филипп Ригованов</a>, студент группы КТбз4-3</li>
-            <li class="next">💪🏻 Дисциплина: Культура здоровья</li>
+            <li class="next">📚 Дисциплина: Культура здоровья</li>
             <li class="next">👩🏻‍🏫 Преподаватель: <a href="https://sfedu.ru/person/nvkadetova" target="_blank">Кадетова Наталья Владимировна</a></li>
         </ul>
         <style>
-            ul.unmarked {
-                list-style: none;
-            }
             ul.unmarked li {
                 list-style-type: none;
+            }
+            .slide ul.unmarked > li:lang(ru)::before {
+                content: none;
             }
         </style>
     </section>
