--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <figure>
             <img width="500" src="img/plakat-no.jpg" alt="советский плакат" style="margin-top: -80px;">
         </figure>
-        <p style="font-size: 1em;"><br><br><br>Выводы делайте сами</p>
+        <p style="font-size: 1em;"><br><br><br><br>Выводы делайте сами</p>
         </div>
     </section>
     <section class="slide">
