--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <h2>Спасибо за внимание!</h2>
         <ul class="unmarked">
             <li>🏫 Alma mater: <a href="https://ictis.sfedu.ru" target="_blank" title="Институт компьютерных технологий и информационной безопасности">ИКТИБ</a>
-                <a href="http://tti.sfedu.ru" target="_blank" title="Инженерно-технологическая академия">ИТА</a>
+                <a href="https://ru.wikipedia.org/wiki/Инженерно-технологическая_академия_ЮФУ" target="_blank" title="Инженерно-технологическая академия ЮФУ на википедии">ИТА</a>
                 <a href="https://sfedu.ru" target="_blank" title="Южный Федеральный Университет">ЮФУ</a>,
                     кафедра <a href="https://sait.sfedu.ru" target="_blank" title="Кафедра системного анализа и телекоммуникаций">САиТ</a></li>
             <li class="next">🗣 Докладчик: <a href="https://phil.rigovanov.ru" target="_blank">Филипп Ригованов</a>, студент группы КТбз4-3</li>
