--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Ригованов Филипп</p>
     </header>
 
-    <section class="slide" id="cover">
+    <section class="slide clear" id="cover">
         <h2>Алкоголь и здоровье<br>Физиологические механизмы опьянения</h2>
         <p>Доклад Филиппа Ригованова</p>
         <figure>
