--- a/index.html
+++ b/index.html
@@ -50,20 +50,12 @@
         </style>
     </section>
     <section class="slide">
-        <h2 class="shout shrink">Алкоголь и здоровье</h2>
+        <h2 class="shout shrink  clear">Алкоголь и здоровье</h2>
     </section>
-    <section class="slide" id="infographics">
+    <section class="slide clear" id="infographics">
         <figure>
             <img class="cover" src="img/inf.jpg" alt="Инфографика «Какой вред наносит алкоголь организму»">
         </figure>
-        <style>
-            #infographics h2 {
-                color: white;
-            }
-            #infographics.slide::after {
-                left: 945px;
-            }
-        </style>
     </section>
     <section class="slide">
         <h2>Ущерб печени</h2>
@@ -125,13 +117,13 @@
             адсорбируют алкоголь из крови жирсодержащие органы (головной мозг и печень), а также зародыш беременной женщины.
             В печени протекает ферментативное окисление этанола до уксусного альдегида.</p>
     </section>
-    <section class="slide">
+    <section class="slide clear">
         <figure>
-            <img width="820" src="img/metabolism.jpeg" alt="Формула всасывания этилового спирта" style="margin-top: -70px;">
+            <img width="850" src="img/metabolism.jpeg" alt="Формула всасывания этилового спирта" style="margin-top: -85px;">
         </figure>
     </section>
     <section class="slide">
-        <h2 class="shout shrink">Физиологические механизмы опьянения</h2>
+        <h2 class="shout shrink clear">Физиологические механизмы опьянения</h2>
     </section>
     <section class="slide">
         <h2>Эффект виноградной грозди</h2>
