--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         100&nbsp;мл водки необратимо уничтожают около&nbsp;1&nbsp;млн&nbsp;нейронов.</p>
     </section>
     <section class="slide">
-        <h2>Похмелье</h2>
+        <h2 style="margin-top:-29px">Похмелье</h2>
         <p>Синдром похмелья — процесс, связанный с удалением из головного мозга
             погибших из-за отсутствия кровоснабжения нейронов. Тело отторгает погибшие клетки,
             с этим и связаны утренние головные боли. Для удаления погибших клеток в коре головного мозга
