--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <section class="slide">
         <h2 class="shout shrink clear">Физиологические механизмы опьянения</h2>
     </section>
-    <section class="slide">
+    <section class="slide" style="margin-top:-30px">
         <h2>Эффект виноградной грозди</h2>
         <p>При поступлении в кровь алкоголь начинает соприкасаться с эритроцитами.
 
@@ -152,7 +152,7 @@
         100&nbsp;мл водки необратимо уничтожают около&nbsp;1&nbsp;млн&nbsp;нейронов.</p>
     </section>
     <section class="slide">
-        <h2 style="margin-top:-29px">Похмелье</h2>
+        <h2 style="margin-top:-30px">Похмелье</h2>
         <p>Синдром похмелья — процесс, связанный с удалением из головного мозга
             погибших из-за отсутствия кровоснабжения нейронов. Тело отторгает погибшие клетки,
             с этим и связаны утренние головные боли. Для удаления погибших клеток в коре головного мозга
