--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             }
         </style>
     </section>
-    <section class="slide">
-        <h2 class="shout shrink  clear">Алкоголь и здоровье</h2>
+    <section class="slide clear">
+        <h2 class="shout shrink">Алкоголь и здоровье</h2>
     </section>
     <section class="slide clear" id="infographics">
         <figure>
@@ -122,8 +122,8 @@
             <img width="850" src="img/metabolism.jpeg" alt="Формула всасывания этилового спирта" style="margin-top: -85px;">
         </figure>
     </section>
-    <section class="slide">
-        <h2 class="shout shrink clear">Физиологические механизмы опьянения</h2>
+    <section class="slide clear">
+        <h2 class="shout shrink">Физиологические механизмы опьянения</h2>
     </section>
     <section class="slide" style="margin-top:-30px">
         <h2>Эффект виноградной грозди</h2>
