--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <section class="slide clear">
         <h2 class="shout shrink">Физиологические механизмы опьянения</h2>
     </section>
-    <section class="slide" style="margin-top:-30px">
-        <h2>Эффект виноградной грозди</h2>
+    <section class="slide">
+        <h2 style="margin-top:-30px">Эффект виноградной грозди</h2>
         <p>При поступлении в кровь алкоголь начинает соприкасаться с эритроцитами.
 
         Спиртосодержащая жидкость удаляет липидный защитный слой эритроцитов и снимает электростатическое напряжение.
