--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <div class="progress"></div>
 
-    <script src="shower/shower.js"></script>
+    <script src="shower/shower.min.js"></script>
 
 </body>
 </html>
