--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Алкоголь и здоровье. Физиологические механизмы опьянения.</title>
     <meta charset="utf-8">
+    <meta name="description" content="Слайды презентации на движке shower">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="shower/themes/ribbon/styles/styles.css">
     <style>
