--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                 <a href="https://ru.wikipedia.org/wiki/Инженерно-технологическая_академия_ЮФУ" target="_blank" title="Инженерно-технологическая академия ЮФУ на википедии">ИТА</a>
                 <a href="https://sfedu.ru" target="_blank" title="Южный Федеральный Университет">ЮФУ</a>,
                     кафедра <a href="https://sait.sfedu.ru" target="_blank" title="Кафедра системного анализа и телекоммуникаций">САиТ</a></li>
-            <li class="next">🗣 Докладчик: <a href="https://phil.rigovanov.ru" target="_blank">Филипп Ригованов</a>, студент группы КТбз4-3</li>
-            <li class="next">📚 Дисциплина: Культура здоровья</li>
-            <li class="next">👩🏻‍🏫 Преподаватель: <a href="https://sfedu.ru/person/nvkadetova" target="_blank">Кадетова Наталья Владимировна</a></li>
+            <li>🗣 Докладчик: <a href="https://phil.rigovanov.ru" target="_blank">Филипп Ригованов</a>, студент группы КТбз4-3</li>
+            <li>📚 Дисциплина: Культура здоровья</li>
+            <li>👩🏻‍🏫 Преподаватель: <a href="https://sfedu.ru/person/nvkadetova" target="_blank">Кадетова Наталья Владимировна</a></li>
         </ul>
         <style>
             ul.unmarked li {
