link to root corrected

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	<script type="application/ld+json"> {"description":"Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»","url":"https://rigovanov.ru/alcohol/","@type":"WebSite","image":"https://rigovanov.ru/alcohol/img/inf.jpg","headline":"Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»","name":"Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»","@context":"https://schema.org"}</script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="shower/themes/ribbon/styles/styles.css">
-    <link rel="shortcut icon" href="//favicon.ico" type="image/x-icon">
-    <link rel="icon" href="//favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="//apple-touch-icon-60x60.png" sizes="60x60">
-    <link rel="apple-touch-icon" href="//apple-touch-icon-120x120.png" sizes="120x120">
-    <link rel="apple-touch-icon" href="//apple-touch-icon-180x180.png" sizes="180x180">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-60x60.png" sizes="60x60">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-120x120.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180">
     <style>
         .shower {
             --slide-ratio: calc(16 / 9);
