--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <title>Алкоголь и здоровье. Физиологические механизмы опьянения.</title>
     <meta charset="utf-8">
     <meta name="description" content="Слайды презентации на движке shower">
-    <meta property="og:title" content="Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»" />
+    <meta property="og:title" content="Алкоголь и здоровье. Физиологические механизмы опьянения." />
 	<meta property="og:locale" content="ru_RU" />
 	<meta property="og:description" content="Слайды презентации на движке shower" />
 	<meta property="og:type" content="website" />
 	<link rel="canonical" href="https://rigovanov.ru/alcohol/" />
 	<meta property="og:url" content="https://rigovanov.ru/alcohol/" />
-	<meta property="og:site_name" content="Алкоголь и здоровье. Физиологические механизмы опьянения. Слайды презентации на движке shower." />
+	<meta property="og:site_name" content="rigovanov.ru" />
 	<meta property="og:image" content="https://rigovanov.ru/alcohol/img/inf.jpg" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:image" content="https://rigovanov.ru/alcohol/img/inf.jpg" />
-	<meta property="twitter:title" content="Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»" />
-	<script type="application/ld+json"> {"description":"Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»","url":"https://rigovanov.ru/alcohol/","@type":"WebSite","image":"https://rigovanov.ru/alcohol/img/inf.jpg","headline":"Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»","name":"Слайды презентации «Алкоголь и здоровье. Физиологические механизмы опьянения.»","@context":"https://schema.org"}</script>
+	<meta property="twitter:title" content="Алкоголь и здоровье. Физиологические механизмы опьянения." />
+	<script type="application/ld+json"> {"description":"Слайды презентации на движке shower","url":"https://rigovanov.ru/alcohol/","@type":"WebSite","image":"https://rigovanov.ru/alcohol/img/inf.jpg","headline":"Алкоголь и здоровье. Физиологические механизмы опьянения.","name":"rigovanov.ru","@context":"https://schema.org"}</script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="shower/themes/ribbon/styles/styles.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
