--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <title>Алкоголь и здоровье. Физиологические механизмы опьянения.</title>
     <meta charset="utf-8">
-    <meta name="description" content="Слайды презентации на движке shower">
+    <meta name="description" content="Слайды презентации на движке shower для зачёта по дисциплине «Культура Здоровья»">
     <meta property="og:title" content="Алкоголь и здоровье. Физиологические механизмы опьянения." />
 	<meta property="og:locale" content="ru_RU" />
-	<meta property="og:description" content="Слайды презентации на движке shower" />
+	<meta property="og:description" content="Слайды презентации на движке shower для зачёта по дисциплине «Культура Здоровья»" />
 	<meta property="og:type" content="website" />
 	<link rel="canonical" href="https://rigovanov.ru/alcohol/" />
 	<meta property="og:url" content="https://rigovanov.ru/alcohol/" />
@@ -15,8 +15,8 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:image" content="https://rigovanov.ru/alcohol/img/inf.jpg" />
 	<meta property="twitter:title" content="Алкоголь и здоровье. Физиологические механизмы опьянения." />
-	<script type="application/ld+json"> {"description":"Слайды презентации на движке shower","url":"https://rigovanov.ru/alcohol/","@type":"WebSite","image":"https://rigovanov.ru/alcohol/img/inf.jpg","headline":"Алкоголь и здоровье. Физиологические механизмы опьянения.","name":"rigovanov.ru","@context":"https://schema.org"}</script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="application/ld+json"> {"description":"Слайды презентации на движке shower для зачёта по дисциплине «Культура Здоровья»","url":"https://rigovanov.ru/alcohol/","@type":"WebSite","image":"https://rigovanov.ru/alcohol/img/inf.jpg","headline":"Алкоголь и здоровье. Физиологические механизмы опьянения.","name":"rigovanov.ru","@context":"https://schema.org"}</script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="shower/themes/ribbon/styles/styles.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
