--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
             }
         </style>
     </section>
+   <section id="theend" class="slide clear" style="background-color: black">
+    <figure>
+            <img class="cover" src="img/qr.svg" alt="QR-код со ссылкой на слайды этой презентации">
+    </figure>
+  </section>
     <footer class="badge">
         <a href="https://github.com/a1ip/alcohol">Исходный код</a>
     </footer>
