--- a/index.html
+++ b/index.html
@@ -212,7 +212,6 @@
             }
         </style>
     </section>
-
     <section class="slide" id="see-more">
         <h2 class="shout">
             <a href="https://rigovanov.ru/alcohol">rigovanov.ru/alcohol</a>
@@ -223,9 +222,9 @@
             }
         </style>
     </section>
-   <section id="theend" class="slide clear" style="background-color: black">
+   <section id="the-end" class="slide clear" style="background-color: black">
     <figure>
-            <img class="cover" src="img/qr.svg" alt="QR-код со ссылкой на слайды этой презентации">
+            <img class="cover" src="img/qr.gif" alt="QR-код со ссылкой на слайды этой презентации">
     </figure>
   </section>
     <footer class="badge">
